--- a/hansen-learning-collaborative/app/globals.css
+++ b/hansen-learning-collaborative/app/globals.css
@@ -2,13 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+body {
+  font-family: Futura, Helvetica;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Futura, Helvetica;
+@layer base {
+  :root {
+    --radius: 0.5rem;
+  }
 }
